--- a/frontend/index.html
+++ b/frontend/index.html
@@ -140,6 +140,11 @@
             </tbody>
           </table>
         </div>
+        <div id="pagination" class="pagination" hidden>
+          <button type="button" id="pagination-prev" class="button button--secondary">Previous</button>
+          <span id="pagination-label" class="pagination__label" aria-live="polite">Page 1 of 1</span>
+          <button type="button" id="pagination-next" class="button button--secondary">Next</button>
+        </div>
       </section>
     </main>
 
