Add STF launch controls to details modal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -319,6 +319,11 @@
             &times;
           </button>
         </div>
+        <div id="details-modal-actions" class="details-modal__actions" hidden>
+          <button type="button" class="button" id="details-open-stf">
+            Open in STF
+          </button>
+        </div>
         <p class="details-modal__hint">Use the information below to copy the details manually.</p>
         <pre
           id="details-modal-body"
