Embed STF sessions within the portal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,9 +158,10 @@
           <p id="stf-session-status" class="stf-session__status" hidden></p>
         </div>
         <button type="button" id="stf-session-close" class="button button--secondary">
-          Close session
+          End session
         </button>
       </div>
+      <p id="stf-session-message" class="stf-session__message" hidden></p>
       <iframe
         id="stf-session-frame"
         class="stf-session__frame"
