--- a/frontend/index.html
+++ b/frontend/index.html
@@ -355,5 +355,60 @@
       </div>
     </div>
 
+    <div
+      id="stream-modal"
+      class="modal"
+      role="dialog"
+      aria-modal="true"
+      aria-hidden="true"
+      aria-labelledby="stream-modal-title"
+      aria-describedby="stream-modal-description"
+    >
+      <div class="modal__backdrop" data-dismiss></div>
+      <div class="modal__content stream-modal__content" role="document">
+        <div class="modal__header">
+          <h3 id="stream-modal-title">Device stream</h3>
+          <button type="button" class="modal__close" data-dismiss aria-label="Close stream window">
+            &times;
+          </button>
+        </div>
+        <div class="modal__body stream-modal__body">
+          <p id="stream-modal-status" class="stream-modal__status" hidden></p>
+          <div class="stream-modal__frame-wrapper">
+            <iframe
+              id="stream-modal-frame"
+              class="stream-modal__frame"
+              title="Device live stream"
+              allow="autoplay; fullscreen"
+              referrerpolicy="no-referrer"
+            ></iframe>
+          </div>
+          <div class="stream-modal__meta">
+            <span id="stream-modal-udid" class="stream-modal__udid" hidden></span>
+            <span id="stream-modal-url" class="stream-modal__url" hidden></span>
+            <a
+              id="stream-modal-open-external"
+              class="button button--secondary stream-modal__external"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer"
+              hidden
+            >
+              Open in new tab
+            </a>
+          </div>
+          <p id="stream-modal-description" class="stream-modal__description">
+            The live stream opens in this window. If it does not load, use the "Open in new tab" button to launch it
+            separately.
+          </p>
+        </div>
+        <div class="modal__footer stream-modal__footer">
+          <button type="button" class="button button--secondary" id="stream-modal-close" data-dismiss>
+            Close
+          </button>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
