--- a/frontend/index.html
+++ b/frontend/index.html
@@ -357,7 +357,7 @@
 
     <div
       id="stream-modal"
-      class="modal"
+      class="modal stream-modal"
       role="dialog"
       aria-modal="true"
       aria-hidden="true"
@@ -366,7 +366,7 @@
     >
       <div class="modal__backdrop" data-dismiss></div>
       <div class="modal__content stream-modal__content" role="document">
-        <div class="modal__header">
+        <div class="modal__header stream-modal__header">
           <h3 id="stream-modal-title">Device stream</h3>
           <button type="button" class="modal__close" data-dismiss aria-label="Close stream window">
             &times;
